GitHub Actions 및 배포 구성 업데이트: release.yml에서 브랜치 설정 수정, secrets 파일에서 GITHUB_TOKEN 추출 방식 변경, deploy.yml에서 이미지 및 레지스트리 정보 업데이트, docker-compose.yml 새로 추가

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@ name: Releasee
 
 on:
   push:
-    branches: [ v*.*.* ]
+    # branches: [ v*.*.* ]
+    branches: [ main ]
 
 env:
   REGISTRY: ghcr.io
@@ -38,5 +39,6 @@ jobs:
           with:
             context: .
             push: true
-            tags: ${{ steps.meta.outputs.tags }}
+            # tags: ${{ steps.meta.outputs.tags }}
+            tags: latest
             labels: ${{ steps.meta.outputs.labels }}
