--- a/config/database.yml
+++ b/config/database.yml
@@ -81,9 +81,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: al_news_production
-    username: al_news
-    password: <%= ENV["AL_NEWS_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
     database: al_news_production_cache
