허니배저 배포 알림 액션 추가: 배포 시 알림을 위한 설정 적용

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,3 +41,6 @@ jobs:
             push: true
             tags: ghcr.io/stadia/al-news:latest
             labels: ${{ steps.meta.outputs.labels }}
+        - uses: honeybadger-io/github-notify-deploy-action@v1
+          with:
+            api_key: ${{ secrets.HONEYBADGER_API_KEY }}
