--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  url: MyString
+  title: <%= Faker::Book.title %>
+  url: <%= Faker::Internet.url %>
   user: one
 
 two:
-  title: MyString
-  url: MyString
+  title: <%= Faker::Book.title %>
+  url: <%= Faker::Internet.url %>
   user: two
