--- a/test/fixtures/sites.yml
+++ b/test/fixtures/sites.yml
@@ -7,7 +7,9 @@
 one:
   name: <%= Faker::Company.name %>
   base_uri: <%= "https://#{Faker::Internet.domain_name}" %>
+  client: 'ApplicationClient'
 
 two:
   name: <%= Faker::Company.name %>
   base_uri: <%= "https://#{Faker::Internet.domain_name}" %>
+  client: 'ApplicationClient'
