--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -2,3 +2,6 @@ production:
   rails_at_scale_job:
     class: RailsAtScaleJob
     schedule: "0 7 * * *"
+  gmail_article_job:
+    class: GmailArticleJob
+    schedule: "0 8 * * *"
