Tailwind CSS 설정에 폰트 변수 추가 및 flowbite-typography 패키지 의존성 추가

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "al-news",
   "devDependencies": {
-    "flowbite": "^3.1.2"
+    "flowbite": "^3.1.2",
+    "flowbite-typography": "^1.0.5"
   }
 }
