ruby_llm 버전 업데이트: "~> 1.3rc1"에서 "~> 1.3.0"으로 변경 및 rbs_collection.lock.yaml에 stdlib 소스 추가

--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -141,6 +141,10 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: dbm
+  version: '0'
+  source:
+    type: stdlib
 - name: delegate
   version: '0'
   source:
@@ -290,6 +294,14 @@ gems:
   source:
     type: stdlib
 - name: prettyprint
+  version: '0'
+  source:
+    type: stdlib
+- name: pstore
+  version: '0'
+  source:
+    type: stdlib
+- name: psych
   version: '0'
   source:
     type: stdlib
