Hacker News API 클라이언트 및 작업 업데이트: 새로운 스토리 및 태그 필드 추가, 주기적 작업 스케줄 수정

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -8,3 +8,6 @@ production:
   youtube_site_job:
     class: YoutubeSiteJob
     schedule: "0 8 * * *"
+  hacker_news_job:
+    class: HackerNewsJob
+    schedule: "0 6 * * *"
