Hacker News 작업 클래스 이름 수정: HackerNewsJob에서 HackerNewsSiteJob으로 변경

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -9,5 +9,5 @@ production:
     class: YoutubeSiteJob
     schedule: "0 8 * * *"
   hacker_news_job:
-    class: HackerNewsJob
+    class: HackerNewsSiteJob
     schedule: "0 6 * * *"
