--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "al-news",
+  "name": "ra-news",
   "devDependencies": {
     "flowbite": "^3.1.2",
     "flowbite-typography": "^1.0.5"
