--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,14 +32,14 @@ jobs:
           id: meta
           uses: docker/metadata-action@v5
           with:
-            images: ghcr.io/stadia/al-news
+            images: ghcr.io/stadia/ra-news
         - name: Build and push Docker image
           id: push
           uses: docker/build-push-action@v6
           with:
             context: .
             push: true
-            tags: ghcr.io/stadia/al-news:latest
+            tags: ghcr.io/stadia/ra-news:latest
             labels: ${{ steps.meta.outputs.labels }}
         - uses: honeybadger-io/github-notify-deploy-action@v1
           with:
