--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,7 +2,7 @@
 service: al_news
 
 # Name of the container image.
-image: ghcr.io/stadia/al-news:latest
+image: ghcr.io/stadia/ra-news:latest
 
 # Deploy to these servers.
 servers:
