GmailArticleJob 및 RssSiteJob의 enqueue_all 메서드를 개선하여 작업 대기 로직을 단순화하고, recurring.yml에서 작업 스케줄을 업데이트했습니다.

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,10 +1,11 @@
 production:
   rss_site_job:
-    class: RssSiteJob
+    class:
+    command: "RssSiteJob.enqueue_all"
     schedule: "0 7 * * *"
   gmail_article_job:
-    class: GmailArticleJob
-    schedule: "0 10 * * 2"
+    command: "GmailArticleJob.enqueue_all"
+    schedule: "0 10 * * 1-5"
   youtube_site_job:
     class: YoutubeSiteJob
     schedule: "0 8 * * *"
