--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types:
       - 'opened'
+      - 'reopened'
+  issue_comment:
+    types:
+      - 'created'
   pull_request_review_comment:
     types:
       - 'created'
@@ -36,30 +40,25 @@ jobs:
   review-pr:
     if: |-
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && github.event.action == 'opened') ||
-      (github.event_name == 'issue_comment' && github.event.issue.pull_request &&
-        contains(github.event.comment.body, '@gemini-cli /review') &&
-        (
-          github.event.comment.author_association == 'OWNER' ||
-          github.event.comment.author_association == 'MEMBER' ||
-          github.event.comment.author_association == 'COLLABORATOR'
-        )
+      (
+        github.event_name == 'pull_request' &&
+        contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.pull_request.author_association)
       ) ||
-      (github.event_name == 'pull_request_review_comment' &&
-        contains(github.event.comment.body, '@gemini-cli /review') &&
+      (
         (
-          github.event.comment.author_association == 'OWNER' ||
-          github.event.comment.author_association == 'MEMBER' ||
-          github.event.comment.author_association == 'COLLABORATOR'
-        )
+          (
+            github.event_name == 'issue_comment' &&
+            github.event.issue.pull_request
+          ) ||
+          github.event_name == 'pull_request_review_comment'
+        ) &&
+        contains(github.event.comment.body, '@gemini-cli /review') &&
+        contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.comment.author_association)
       ) ||
-      (github.event_name == 'pull_request_review' &&
+      (
+        github.event_name == 'pull_request_review' &&
         contains(github.event.review.body, '@gemini-cli /review') &&
-        (
-          github.event.review.author_association == 'OWNER' ||
-          github.event.review.author_association == 'MEMBER' ||
-          github.event.review.author_association == 'COLLABORATOR'
-        )
+        contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.review.author_association)
       )
     timeout-minutes: 5
     runs-on: 'ubuntu-latest'
@@ -202,22 +201,27 @@ jobs:
             ## Role
 
             You are an expert code reviewer. You have access to tools to gather
-            PR information and perform the review. Use the available tools to
+            PR information and perform the review on GitHub. Use the available tools to
             gather information; do not ask for information to be provided.
+
+            ## Requirements
+            1. All feedback must be left on GitHub.
+            2. Any output that is not left in GitHub will not be seen.
 
             ## Steps
 
             Start by running these commands to gather the required data:
-            1. Run: echo "${PR_DATA}" to get PR details (JSON format)
-            2. Run: echo "${CHANGED_FILES}" to get the list of changed files
-            3. Run: echo "${PR_NUMBER}" to get the PR number
-            4. Run: echo "${ADDITIONAL_INSTRUCTIONS}" to see any specific review
+            1. Run: echo $"{REPOSITORY}" to get the github repository in <OWNER>/<REPO> format
+            2. Run: echo "${PR_DATA}" to get PR details (JSON format)
+            3. Run: echo "${CHANGED_FILES}" to get the list of changed files
+            4. Run: echo "${PR_NUMBER}" to get the PR number
+            5. Run: echo "${ADDITIONAL_INSTRUCTIONS}" to see any specific review
                instructions from the user
-            5. Run: gh pr diff "${PR_NUMBER}" to see the full diff and reference
+            6. Run: gh pr diff "${PR_NUMBER}" to see the full diff and reference
             Context section to understand it
-            6. For any specific files, use: cat filename, head -50 filename, or
+            7. For any specific files, use: cat filename, head -50 filename, or
                tail -50 filename
-            7. If ADDITIONAL_INSTRUCTIONS contains text, prioritize those
+            8. If ADDITIONAL_INSTRUCTIONS contains text, prioritize those
                specific areas or focus points in your review. Common instruction
                examples: "focus on security", "check performance", "review error
                handling", "check for breaking changes"
@@ -377,11 +381,11 @@ jobs:
 
             ## Review
 
-            Once you have the information, provide a comprehensive code review by:
+            Once you have the information and are ready to leave a review on GitHub, post the review to GitHub using the GitHub MCP tool by:
             1. Creating a pending review: Use the mcp__github__create_pending_pull_request_review to create a Pending Pull Request Review.
 
             2. Adding review comments:
-                2.1 Use the mcp__github__add_comment_to_pending_review to add comments to the Pending Pull Request Review. Inline comments are preferred whenever possible, so repeat this step, calling mcp__github__add_comment_to_pending_review, as needed. All comments about specific lines of code should use inline comments. It is preferred to use code suggestions when possible, which include a code block that is labeled "suggestion", which contains what the new code should be. All comments should also have a severity. They syntax is:
+                2.1 Use the mcp__github__add_comment_to_pending_review to add comments to the Pending Pull Request Review. Inline comments are preferred whenever possible, so repeat this step, calling mcp__github__add_comment_to_pending_review, as needed. All comments about specific lines of code should use inline comments. It is preferred to use code suggestions when possible, which include a code block that is labeled "suggestion", which contains what the new code should be. All comments should also have a severity. The syntax is:
                   Normal Comment Syntax:
                   <COMMENT>
                   {{SEVERITY}} {{COMMENT_TEXT}}
@@ -431,6 +435,10 @@ jobs:
                 - Mention overall patterns or architectural decisions
                 - Highlight positive aspects of the implementation
                 - Note any recurring themes across files
+
+            ## Final Instructions
+
+            Remember, you are running in a VM and no one reviewing your output. Your review must be posted to GitHub using the MCP tools to create a pending review, add comments to the pending review, and submit the pending review.
 
 
       - name: 'Post PR review failure comment'
