--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -71,7 +71,7 @@ jobs:
         id: 'generate_token'
         if: |-
           ${{ vars.APP_ID }}
-        uses: 'actions/create-github-app-token@a8d616148505b5069dccd32f177bb87d7f39123b' # ratchet:actions/create-github-app-token@v2
+        uses: 'actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e' # ratchet:actions/create-github-app-token@v2
         with:
           app-id: '${{ vars.APP_ID }}'
           private-key: '${{ secrets.APP_PRIVATE_KEY }}'
@@ -211,7 +211,7 @@ jobs:
             ## Steps
 
             Start by running these commands to gather the required data:
-            1. Run: echo $"{REPOSITORY}" to get the github repository in <OWNER>/<REPO> format
+            1. Run: echo "${REPOSITORY}" to get the github repository in <OWNER>/<REPO> format
             2. Run: echo "${PR_DATA}" to get PR details (JSON format)
             3. Run: echo "${CHANGED_FILES}" to get the list of changed files
             4. Run: echo "${PR_NUMBER}" to get the PR number
