--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  checkout_timeout: 5
+  reaping_frequency: 10
   schema_search_path: "ra_news,public"
 
 
