--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -10,10 +10,13 @@ production:
     schedule: "0 8 * * *"
   hacker_news_job:
     class: HackerNewsSiteJob
-    schedule: "0 0,12 * * *"
+    schedule: "10 */2 * * *"
   rss_site_page_job:
     command: "RssSitePageJob.enqueue_all"
     schedule: "0 6 * * *"
   sitemap_refresh:
     command: "SitemapService.call"
     schedule: "30 * * * 1-5"
+  article_batch_job:
+    class: "ArticleBatchJob"
+    schedule: "0 */1 * * *"
