--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,49 @@
-<% password_digest = BCrypt::Password.create("password") %>
+# frozen_string_literal: true
 
+<% password_digest = BCrypt::Password.create("password") %>
+<% admin_password_digest = BCrypt::Password.create("admin_password") %>
+
+# Regular users
+john:
+  email_address: john@example.com
+  name: 존 도
+  password_digest: <%= password_digest %>
+
+jane:
+  email_address: jane@example.com
+  name: 제인 스미스
+  password_digest: <%= password_digest %>
+
+# Admin user
+admin:
+  email_address: stadia@gmail.com
+  name: 관리자
+  password_digest: <%= admin_password_digest %>
+
+# Test users with Korean names
+korean_user:
+  email_address: korean@example.com
+  name: 김철수
+  password_digest: <%= password_digest %>
+
+user_with_spaces:
+  email_address: spaces@example.com
+  name: 홍 길 동
+  password_digest: <%= password_digest %>
+
+# User for validation testing
+minimal_user:
+  email_address: minimal@example.com
+  name: 최소
+  password_digest: <%= password_digest %>
+
+# Legacy fixture names for backwards compatibility
 one:
-  email_address: <%= Faker::Internet.email %>
+  email_address: one@example.com
+  name: 사용자 일
   password_digest: <%= password_digest %>
 
 two:
-  email_address: <%= Faker::Internet.email %>
+  email_address: two@example.com
+  name: 사용자 이
   password_digest: <%= password_digest %>
