--- a/config/database.yml
+++ b/config/database.yml
@@ -59,8 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  url: "postgres://localhost:5432/ra-news_test"
-  database: ra-news_test
+  url: <%= "#{ENV["TEST_DATABASE_URL"]}" %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
