--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,7 @@ default: &default
 
 development:
   <<: *default
-  url: "postgres://localhost:5432/ra-news_development"
-  database: ra-news_development
+  url: <%= ENV["DATABASE_URL"] %>
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
