--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -6,7 +6,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionmailer
@@ -14,7 +14,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -22,7 +22,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actiontext
@@ -30,7 +30,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -38,7 +38,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -46,7 +46,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -54,7 +54,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -62,7 +62,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -70,7 +70,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -78,7 +78,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: addressable
@@ -86,23 +86,27 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
-- name: base64
-  version: '0.1'
+- name: ast
+  version: '2.4'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: base64
+  version: 0.3.0
+  source:
+    type: rubygems
 - name: bcrypt
   version: '3.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: benchmark
@@ -114,7 +118,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: cgi
@@ -126,7 +130,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: connection_pool
@@ -134,14 +138,10 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: date
-  version: '0'
-  source:
-    type: stdlib
-- name: dbm
   version: '0'
   source:
     type: stdlib
@@ -158,7 +158,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: erb
@@ -166,11 +166,11 @@ gems:
   source:
     type: stdlib
 - name: faker
-  version: '2.23'
+  version: 3.4.2
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: faraday
@@ -178,7 +178,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: fileutils
@@ -194,15 +194,27 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: hashie
+  version: '5.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: herb
+  version: 0.7.5
+  source:
+    type: rubygems
 - name: i18n
   version: '1.10'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: io-console
@@ -213,6 +225,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: jwt
+  version: '2.5'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: logger
   version: '0'
   source:
@@ -222,7 +242,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: marcel
@@ -230,7 +250,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: mini_mime
@@ -238,7 +258,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
@@ -246,17 +266,13 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: monitor
   version: '0'
   source:
     type: stdlib
-- name: mutex_m
-  version: 0.3.0
-  source:
-    type: rubygems
 - name: net-http
   version: '0'
   source:
@@ -270,7 +286,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: nokogiri
@@ -278,13 +294,29 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: oauth2
+  version: 2.0.17
+  source:
+    type: rubygems
 - name: openssl
   version: '0'
   source:
     type: stdlib
+- name: optparse
+  version: '0'
+  source:
+    type: stdlib
+- name: parser
+  version: '3.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: pathname
   version: '0'
   source:
@@ -297,20 +329,12 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: pstore
-  version: '0'
-  source:
-    type: stdlib
-- name: psych
-  version: '0'
-  source:
-    type: stdlib
 - name: rack
   version: '2.2'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -318,7 +342,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-html-sanitizer
@@ -326,7 +350,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -334,7 +358,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rake
@@ -342,9 +366,17 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: rbs
+  version: 3.9.5
+  source:
+    type: rubygems
+- name: rbs_rails
+  version: 0.12.1
+  source:
+    type: rubygems
 - name: rdoc
   version: '0'
   source:
@@ -354,7 +386,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -362,7 +394,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: securerandom
@@ -377,6 +409,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: sqlite3
+  version: '2.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: stringio
   version: '0'
   source:
@@ -390,7 +430,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: time
@@ -410,11 +450,19 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: e2749137770bcff57a062d47b0d08922071f3d37
+    revision: 0cb6351d218704700cf4df797ff8966b3a418fcd
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: uri
   version: '0'
   source:
     type: stdlib
+- name: version_gem
+  version: 1.1.9
+  source:
+    type: rubygems
+- name: x
+  version: 0.16.0
+  source:
+    type: rubygems
 gemfile_lock_path: Gemfile.lock
