Switch to MAIL_* env vars; add IMAP override
Introduce MAIL_ADDRESS, MAIL_PASSWORD, IMAP_ADDRESS env vars for Gmail
client and docker-compose. Add DEFAULT_IMAP_ADDRESS constant and remove
GMAIL_PASSWORD usage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - RAILS_ENV=production
       - HONEYBADGER_API_KEY=${HONEYBADGER_API_KEY}
       - WEB_CONCURRENCY=2
-      - GMAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_ADDRESS=${MAIL_ADDRESS}
+      - IMAP_ADDRESS=${IMAP_ADDRESS}
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
 
     labels:
@@ -44,7 +46,9 @@ services:
       - RAILS_ENV=production
       - HONEYBADGER_API_KEY=${HONEYBADGER_API_KEY}
       - WEB_CONCURRENCY=2
-      - GMAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_ADDRESS=${MAIL_ADDRESS}
+      - IMAP_ADDRESS=${IMAP_ADDRESS}
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
     networks:
       - homeNetwork
