Update container image reference
Changed from ghcr.io/stadia/ra-news:latest to stadia/ra-news to use the
simpler image name without explicit registry or tag.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,7 +2,7 @@
 service: al_news
 
 # Name of the container image.
-image: ghcr.io/stadia/ra-news:latest
+image: stadia/ra-news
 
 # Deploy to these servers.
 servers:
